fixed mobile spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,11 +14,11 @@ header {
     flex-wrap: wrap;
     justify-content: space-between;
     background-color: rgb(42, 48, 39);
-    height: 100px;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
     box-shadow: 0 0 20px 0 rgba(42, 48, 39, .8);
+    min-width: 437px;
 }
 header h1 {
     font-size: 80px;
@@ -54,11 +54,11 @@ header h1 {
     
     
 }
-.hero {
+/*.hero {
     background-color:rgb(217, 182, 182);
     width: 100%;
     height: 500px;
-}
+} */
  .hero h1 {
         font-size: 80px;
         font-weight: 600;
@@ -69,18 +69,17 @@ header h1 {
  }
 
  .info {
-     padding-top: 120px;
+    height: 1000px; 
     display: flex;
     flex-direction: column;
-    justify-content: space-around; 
-    background-color: #d9b6b6;
-     width: 100%;
-     background-color: transparent;
+    justify-content: space-around;
+    padding-top: 300px; 
      
     
  }
  .info h1 {
     text-align: center;
+    position: relative;
     font-size: 80px;
     font-weight: 600;
     color: transparent;
@@ -91,22 +90,15 @@ header h1 {
         
  }
  .bio-box{ 
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
     background-color: #2a3027;
-     width: 70%;
+     width: 60%;
      height: 300px;
-     padding-right: 70%;
-     padding-left: auto;
+     margin-left: 20%;
      border-radius: 200px;
+     min-width: 295px;
+     margin-bottom: 200px;
  }
  .bio-box img {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding-right: 70%;
-    padding-left: 10%;
     height: 300px;
     width: 300px;
     border: 5px solid #2a3027;
@@ -131,14 +123,11 @@ header h1 {
  }
     
  .portfolio-blocks div {
-    margin-left: 100px;
-    margin-right: auto;
     margin-top: 100px;
-    margin-bottom: auto;
     height: 300px;
-    width:300px;
     background-color: #2a3027;
     border-radius: 50%;
+    min-width: 300px;
     
     
 }
@@ -177,13 +166,18 @@ footer {
    padding-top: 100px;
     background-color: rgb(42, 48, 39);
     height: 100px;
+    min-width: 437px;
 }
 
+@media screen and (max-width: 694px) {
 
- @media screen and (max-width: 723px) {
+
+}
+
+ @media screen and (max-width: 640px) {
 
     .navigation a {
-        font-size: 25px;
+        font-size: 20px;
     }
  }
 
